# alhazen-skill-dismech

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md
.claude-plugin/: marketplace.json
.github/workflows/: build-plugin.yml  claude-autofix.yml  claude-guidance.yml  weekly-gap-review.yml
dismech-workspace/benchmark-rag-vs-structured/: Makefile  README.md  WALKTHROUGH.md  ground_truth.json  pyproject.toml  questions.json
dismech-workspace/benchmark-rag-vs-structured/corpus/: genetic_texts.jsonl  phenotype_texts.jsonl  treatment_texts.jsonl
dismech-workspace/benchmark-rag-vs-structured/results/: section_results.tex
dismech-workspace/benchmark-rag-vs-structured/scripts/: build_rag.py  collect_pmids.py  compute_ground_truth.py  extract_enriched_texts.py  report.py  run_rag.py  run_structured.py  score.py
dismech-workspace/evals/: evals.json
dismech-workspace/iteration-1/: benchmark.json  benchmark.md  eval-1  eval-2  eval-3  eval-4  eval-5
dismech-workspace/iteration-1/annotation-collection-probe/: eval_metadata.json
dismech-workspace/iteration-1/evidence-cross-linking-probe/: eval_metadata.json
dismech-workspace/iteration-1/fop-curation-guidance/: eval_metadata.json
infra/dismech/: alhazen_core.py  plugin.json
plugins/dismech/.claude-plugin/: plugin.json
plugins/dismech/skills/dismech/: SKILL.md  dismech.py  pyproject.toml  schema.tql
plugins/dismech/skills/dismech/dashboard/: index.html
skills/: dismech-notebook
skills/dismech/: USAGE.md  dismech.py  pyproject.toml  schema.tql
skills/dismech-notebook/: schema.tql  skill.yaml
(+53 files in other folders)
